--- a/index.css
+++ b/index.css
@@ -129,10 +129,52 @@ p.studio{
 }
 
 .siteCreation{
+    width: 82%;
     display: flex;
     justify-content: center;
-    margin-bottom: 125px;
+    margin-bottom: 55px;
 }
+
+.siteCreationItem {
+    display: flex;
+}
+
+.pictureItem{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    width: 110px;
+    height: 110px;
+    background:url("/images/Ellipse\ \(2\).png") center;
+    margin-right: 20px;
+}
+
+.innerCircle{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    width: 90px;
+    height: 90px;
+    background:url("/images/Ellipse\ \(1\).png") center;
+}
+
+.infoItem{
+    width: 50%;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    padding-top: 50px;
+}
+
+.infoParagraph{
+    margin-top: 12px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #999999;
+
+}
+
 
 .devStandarts {
     width: 100%;
